<resources>
    <string name="app_name">Your Electric Bills</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="required_fields">Required Fields(*)</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="meter_board">Meter Board</string>
    <string name="quick_view">Quick View</string>
    <string name="notification">Notification</string>
    <string name="billing">Billing</string>
    <string name="prof_desc">Shows your Basic information</string>
    <string name="meter_board_desc">Your meter board/s data (Energy Consumption)</string>
    <string name="quick_view_desc">Click to view your latest data.</string>
    <string name="notif_desc">Click to show notifications.</string>
    <string name="billing_desc">Whole information of your payemnts.</string>
    <string name="home">Home</string>
    <string name="pin">4-digit Pin</string>
    <string name="my_profile">My Profile</string>
    <string name="meter_boards">Your Meter Boards</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="meter_form">Meter Board Form</string>
    <string name="meter_status">Meter Board Status</string>
    <string name="total_kwh">Total KwH</string>
    <string name="invoice">Invoice</string>
    <string name="search_invoice">Search invoice...</string>
    <string name="add">Add</string>
    <string name="electricity_board">Electricity Board</string>
    <string name="ekec_board_desc">Data revealing your energy cosnumption monthly.</string>
    <string name="search">Search</string>
    <string name="bill_id">Bill ID</string>
    <string name="net_amount">Net Amount</string>
    <string name="paymentDateTime">Payment(Date/Time)</string>
    <string name="meter_board_status">Meter Board Status</string>
    <string name="consumption_unit">Consumption Unit</string>
    <string name="new_bill_payment">New Bill Payment</string>
    <string name="update_payment">Update Payment</string>
    <string name="delete_payment">Delete Payment</string>
    <string name="billing_form">Billing Form</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="excess_paid">Excess Paid</string>
    <string name="payment_date_time">Payment Date/Time</string>
    <string name="choose_meter_board">Choose a meter board</string>
    <string name="sub_payments">Sub-payments</string>
    <string name="previous_reading">Previous Reading</string>
    <string name="present_reading">Present Reading</string>
    <string name="reading_date">Reading Date(dd/mm/yyyy)</string>
    <string name="due_date">Due Date(dd/mm/yyyy)</string>
    <string name="fixed_charge">Fixed Charge</string>
    <string name="energy_charge">Energy Charge</string>
    <string name="tax">Tax</string>
    <string name="interest">Interest</string>
    <string name="previous_balance">Previous Balance</string>
    <string name="previous_interest">Previous Interest</string>
    <string name="others">Others</string>
    <string name="payment">Payment</string>
    <string name="cancel">Cancel</string>
    <string name="icp">Installation Control Point Number</string>
    <string name="call_name">Callname</string>
    <string name="meter_board_id">ID</string>
    <string name="icp_title">ICP</string>
    <string name="status">Status</string>
    <string name="change">Change</string>
    <string name="change_date">Change Date</string>
    <string name="change_date_time">Change Date and Time</string>
    <string name="payment_date">Payment Date</string>
    <string name="select_meter_board">Select meter board:</string>
    <string name="read_date">Date read:</string>
    <string name="energy_consumption">Tap the Dots to see Energy Consumption Values</string>
    <string name="cons_unit">Consump. Unit</string>
    <string name="my_information">My Info</string>
    <string name="search_name">Search meter name...</string>
    <string name="energy_date">Tap the Dots to see Read Date Values</string>
</resources>