<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    tools:context=".Customer.CustomerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="12dp"
        android:text="*"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/customer_registration"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/etMiddleName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMiddleName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/required_fields"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="*"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="*"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etLastName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/etPin" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ripple"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPin" />

    <EditText
        android:id="@+id/etPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/grad_txt"
        android:ems="10"
        android:hint="@string/pin"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="#989898"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="*"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPin"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>