<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".MeterBoard.MeterBoardFormActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/title_back"
        android:text="@string/meter_form"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCallName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/call_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#737373"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIcp" />

    <Spinner
        android:id="@+id/spStatus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTotalKwh" />

    <Button
        android:id="@+id/btnCreateMeterData"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/ripple"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spStatus" />

    <Button
        android:id="@+id/btnUpdateMeterData"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/ripple"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateMeterData" />

    <EditText
        android:id="@+id/etTotalKwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/total_kwh"
        android:textAlignment="center"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#737373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCallName" />

    <EditText
        android:id="@+id/etIcp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/icp"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#737373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>